# mem0rylol

./: .cursorignore  .gitignore  MANIFEST.in  README.rst  conftest.py  pyproject.toml  setup.py
config/: .secrets.toml  settings.toml  test_settings.toml
docs/: api.rst  conf.py  index.rst  installation.rst
docs/_build/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/mem0rylol/base/: embeddings.html  llms.html  vector_stores.html
docs/_build/_modules/mem0rylol/memory/: memory_types.html
docs/_build/_sources/: api.rst.txt  usage.rst.txt
mem0rylol/: config.py
mem0rylol/base/: embeddings.py  llms.py  vector_stores.py
mem0rylol/embeddings/: google_genai.py
mem0rylol/llms/: cerebras.py
mem0rylol/memory/: memory_manager.py  memory_types.py
mem0rylol/schemas/: base.py  lancedb.py
mem0rylol/vector_stores/: lancedb.py
src/mem0rylol/: config.py
src/mem0rylol/embeddings/: google_genai.py
src/mem0rylol/memory/: memory_manager.py
src/mem0rylol/schemas/: base.py  lancedb.py
tests/: test_memory_layer.py
