[tool.poetry]
name = "mem0rylol"
version = "0.1.2"
description = "A sophisticated AI memory layer."
authors = ["toeknee"]
license = "GNU"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain = "^0.2.16"
langchain-cerebras = "^0.1.0"
langchain-google-genai = "^1.0.10"
lancedb = "^0.13.0"
langchain-community = "^0.2.16"
pydantic = "^2.9.1"
langsmith = "^0.1.117"
pylint = "^3.2.7"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
mypy = "^1.11.2"
pytest-cov = "^5.0.0"
bandit = "^1.7.9"
Sphinx = "^8.0.2"
sphinx-autobuild = "^2024.9.3"
pre-commit = "^3.8.0"
twine = "^5.1.1"
tox = "^4.18.1"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
addopts = "--cov=mem0rylol --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
