[tool.poetry]
name = "mem0rylol"
version = "0.2.0"
description = "A sophisticated AI memory layer."
authors = ["toeknee"]
license = "GNU"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.0"
pydantic = "^2.0"
lancedb = "^0.3.0"
packaging = "^23.2"
langchain-core = "^0.2.39"
google-generativeai = ">=0.7.0,<0.8.0"
langchain-google-genai = "1.0.10"
langchain-cerebras = "^0.1.0"
langchain = "^0.2.16"
langchain-community = "^0.2.16"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.2"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
bandit = "^1.7.5"
Sphinx = "^7.2.0"
sphinx-autobuild = "^2024.2.4"
pre-commit = "^3.5.0"
twine = "^4.0.2"
tox = "^4.11.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
addopts = "--cov=mem0rylol --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
